basic validation inserted
years days hours min sec addede, whenever need just cal the dive

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 <body>
 
   <div id="countdown">
-    <span class="days">00</span> days
-    <span class="hours">00</span> hours
-    <span class="mins">00</span> minutes
-    <span class="secs">00</span> Seconds
+    <span class="years"></span> years
+    <span class="days"></span> days
+    <span class="hours"></span> hours
+    <span class="mins"></span> minutes
+    <span class="secs"></span> Seconds
   </div>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
   <script src="countdown.js" charset="utf-8"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      $('#countdown').countdown({date: '5 september 2016 02:05'}, function() {
+      $('#countdown').countdown({date: '5 september 2050 23:5'}, function() {
         $('#countdown').text('we are live');
       });
     });
